--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
 .App {
   min-width: 100vw;
   min-height: 100vh;
-  background-color: hsl(239, 57%, 85%);
+
+  background-color: hsl(223, 19%, 93%);
+
   overflow-x: hidden;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  padding-bottom: 30px;
 }
 .container {
-  max-width: 80%;
+  max-width: 50%;
   margin: 0 auto;
-  overflow-x: hidden;
 }
