--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 
+  overflow-x: hidden;
   padding: 0;
   font-family: "Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
